протестировал маппер